fix scrollbar, fix page reload clearing text on forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,7 +92,7 @@ textarea {
   }
 }
 
-@include scrollbars(.5em, #39382F);
+@include scrollbars(6px, #39382F);
 
 button:focus, select {
   outline: 0 !important;
